examples/test/testpolicy4618.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4618
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key42: value7
      key39: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value12
          key27: value21
      podSelector:
        matchLabels:
          key5: value18
